# study_skypro_0806

./: README.md  pyproject.toml
data/: input_data_examples.json
src/: input_data.py  masks.py  processing.py  widget.py
