[project]
name = "cards-dz"
version = "0.1"
description = "Домашнее задание для курса SkyPro по картам"
authors = [
    {name = "GeorgySinyutich", email = "georgsinuytich@mail.ru"}
]
license = {text = "creativecommon"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
