[tool.poetry]
name = "study-skypro-0806"
version = "0.1"
packages = [{ include = "src" }]
description = "Проект для урока по банковской программе СкайПро"
authors = ["minister-of-state <georgsinuytich@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
